criando componentes com base na api, alterando cor de fundo de acordo com situação do aluno

--- a/componentes/index.html
+++ b/componentes/index.html
@@ -10,15 +10,6 @@
     <title>CRIANDO COMPONENTES</title>
 </head>
 <body>
-    <!-- <div class="card">
-        <div class="card-text">Carolina Vitória</div>
-        <div class="card-image"></div>
-        <div class="card-text">DS2T</div>
-    </div> -->
-
-    <card-aluno data-size="500"></card-aluno>
-    <card-aluno data-name="Carolina Vitória" data-team="DS2T" data-image="./img/7.png"></card-aluno>
-    <card-aluno data-bgcolor="#87ff30" data-name="Thales Santos" data-team="DS1T" data-image="./img/2.png"></card-aluno>
-
+    <div id="container"></div>
 </body>
 </html>
