--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Manipulando elementos html</title>
 </head>
 <body>
+    <a href="semaforo-js/index.html">semáforo</a>
     <main>
         <div>1</div>
         <div>2</div>
